2004-08-09: Change in bq.lisp to allow other files to use its facilities.
	    Invisible to users.  Changed logic in 'fload' so after asking
	    whether to compile a previously uncompiled file it doesn't
	    consider loading old (nonexistent) object code.  (Version 1.4.2)
	
2004-08-06: Introduced :|| as prettier synonym for :\|
	
2004-08-03: Altered implementation of '!' dispatch macro; change
            invisible to users.  Another invisible change to
            subr-synonym (allows specification of numargs).
	
2004-07-30: Made ytdoc.pdf part of the CVS system, so it will be part of
            the "nightly snapshot."  (Version 1.4.1)
	
2004-07-25: Adding 'nthrest'
	
2004-07-10: Simplified Qvar as type	
	
2004-07-09: Added gen-var
	
2004-07-06: Tiny bug fix in setter
	
2004-06-25: Further enhancements to alref. .  Made packages work in
	    names of YTools logical pathnames.  Fixed bug in 'repeat'
	    for var notation (v e0 :then e1) so it's the same as (v =
	    e0 :then e1).  Got 'fload-recheck' working correctly.
	    Version 1.4
	
2004-06-24: Improved definition of 'alref.' so it allows specification
            of equality test, access method, and new-entry builder.
	    Allow package names to occur inside YTools logical pathnames.
	
2004-04-20: Added 'val-or-initialize' and its notational variant,
            'memoize-val', to misc.  Tightened definitions of 'alref' and
	    'alref.' .
	
2004-03-14: Added debug.lisp
	
2004-03-09: Changes for portability.
	
2003-12-17: (branch ytools-1-2-dev) Rejiggered logic to checking
	    whether to recompile in files.lisp.  Eventually this will be
	    right, by the monkeys-and-typewriters theorem.
	
2003-12-11: (branch ytools-1-2-dev) Rewrote file-update checker to get
            right the logic of when to recompile or reload a file.
	
2003-11-08: Slight change to an error message in pathname.lisp.
	
2003-10-28: Changed ytload.lisp to allow .lmd files to be in arbitrary places
	